--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="refresh" content="360" >
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 		<link rel="shortcut icon" href="../images/logo.png">
-		<link rel="stylesheet" href="http://bcs.duapp.com/kwandi/css/jquery.mobile-1.4.2.min.css">
+		<link rel="stylesheet" href="https://bcs.duapp.com/kwandi/css/jquery.mobile-1.4.2.min.css">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link id="weathericon" rel="shortcut icon">
         <!--<link rel="stylesheet" href="css/normalize.css">
@@ -15,7 +15,7 @@
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>-->
 		<!--<script src="http://bcs.duapp.com/kwandi/js/jquery-1.8.3.min.js"></script>-->
 		<script src="js/vendor/jquery-1.9.1.min.js"></script>
-		<script src="http://bcs.duapp.com/kwandi/js/jquery.mobile-1.4.2.min.js"></script>
+		<script src="https://bcs.duapp.com/kwandi/js/jquery.mobile-1.4.2.min.js"></script>
         <!--<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>-->
 		
@@ -28,15 +28,15 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>-->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/lib.js"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/config.js"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/lib.js"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/config.js"></script>
         
         <!-- Add your site or application content here -->
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/prototype.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/effects.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x_util.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/javascripts/prototype.js" type="text/javascript"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/javascripts/effects.js" type="text/javascript"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/javascripts/x.js" type="text/javascript"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/javascripts/x_util.js" type="text/javascript"></script>
+        <script src="https://www.szmb.gov.cn/design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
 		
 		<style>
 			/* Start with core styles outside of a media query that apply to mobile and up */
@@ -165,9 +165,9 @@
 							<div class="center" id="ctext">
 								<img class="cloud full" id="picturePreview" title="卫星云图" alt="卫星云图">
 								<select id="pictureSlt" onchange="changePicture(this);"></select>
-								<img src="http://www.szmb.gov.cn/design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
+								<img src="https://www.szmb.gov.cn/design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
 								<script type="text/javascript">
-									DATA_PATH="http://www.szmb.gov.cn/data_cache/";
+									DATA_PATH="https://www.szmb.gov.cn/data_cache/";
 									createScript(DATA_PATH + "pictures/satPic/index.js?" + Math.random(), initPictureIndex);
 									function initPictureIndex() {
 										if (typeof SZ121_SatelliteCloudPicIndex == 'undefined') return;
@@ -365,9 +365,9 @@
 							<div class="alarm" id="alarm_tip_id"></div>
 						</div>
 					</div>
-					<script type="text/javascript" src="http://www.szmb.gov.cn/design/index/js/raphael-min.js"></script>
+					<script type="text/javascript" src="https://www.szmb.gov.cn/design/index/js/raphael-min.js"></script>
 					<script type="text/javascript">
-						DATA_PATH="http://www.szmb.gov.cn/data_cache/";
+						DATA_PATH="https://www.szmb.gov.cn/data_cache/";
 						createScript(DATA_PATH + "szWeather/sz10day_new.js?random=" + Math.random(), init10dayWeather_new);
 
 						function init10dayWeather_new() {
@@ -388,12 +388,12 @@
 								next_pubDate = formatDate(SZ121_10dayWeather2.today.reporttime, 'M-D', 1) + '6时';
 							}
 							if (typeof SZ121_10dayWeather2.today.nextIcon != 'undefined' && SZ121_10dayWeather2.today.nextIcon) {
-								document.getElementById("today_icon").innerHTML = "<table><td><img class='imgcon' id='weather_icon2_0' src='http://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.icon + ".png'></td><td><p style='text-shadow: 1px 1px 1px #FF0000;'>&nbsp;转</p></td><td><img class='imgcon' id='weather_icon2_1'src='http://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.nextIcon + ".png'></td><td><p id='report'>【天气预报】" + SZ121_10dayWeather2.today.report + "（深圳气象局 " + SZ121_10dayWeather2.pubDate + " 更新）。" + "</p></td></table>";
+								document.getElementById("today_icon").innerHTML = "<table><td><img class='imgcon' id='weather_icon2_0' src='https://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.icon + ".png'></td><td><p style='text-shadow: 1px 1px 1px #FF0000;'>&nbsp;转</p></td><td><img class='imgcon' id='weather_icon2_1'src='https://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.nextIcon + ".png'></td><td><p id='report'>【天气预报】" + SZ121_10dayWeather2.today.report + "（深圳气象局 " + SZ121_10dayWeather2.pubDate + " 更新）。" + "</p></td></table>";
 								document.getElementById("weather_icon2_1").title = '下次更新时间：' + next_pubDate;
 							} else {
-								document.getElementById("today_icon").innerHTML = "<table><td><img class='imgcon' id='weather_icon2_0' src='http://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.icon + ".png'></td><td><p id='report'>【天气预报】" + SZ121_10dayWeather2.today.report + "（深圳气象局 " + SZ121_10dayWeather2.pubDate + " 更新）。" + "</p></td></table>";
+								document.getElementById("today_icon").innerHTML = "<table><td><img class='imgcon' id='weather_icon2_0' src='https://www.szmb.gov.cn/design/index/images/weather_icon2/" + SZ121_10dayWeather2.today.icon + ".png'></td><td><p id='report'>【天气预报】" + SZ121_10dayWeather2.today.report + "（深圳气象局 " + SZ121_10dayWeather2.pubDate + " 更新）。" + "</p></td></table>";
 							}
-							document.getElementById("weathericon").href = 'http://www.szmb.gov.cn/design/index/images/weather_icon2/' + SZ121_10dayWeather2.today.icon + '.png';
+							document.getElementById("weathericon").href = 'https://www.szmb.gov.cn/design/index/images/weather_icon2/' + SZ121_10dayWeather2.today.icon + '.png';
 							document.getElementById("weather_icon2_0").title = '本次更新时间：' + SZ121_10dayWeather2.pubDate;
 						}
 					</script>
@@ -474,7 +474,7 @@
 							西太平洋区域</br>
 							</p>
 							<div class="center" id="WestPacific">
-								<img class="full" id="divimg" title="台风路径" alt="台风路径" src="http://www.shenzhentaifeng.com/images/temp/WestPacific.png">
+								<img class="full" id="divimg" title="台风路径" alt="台风路径" src="https://www.shenzhentaifeng.com/images/temp/WestPacific.png">
 							</div>
 						</div>
 					</div>
