--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>-->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/lib.js"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/config.js"></script>
+        <script src="design/index/js/lib.js"></script>
+        <script src="design/index/js/config.js"></script>
         
         <!-- Add your site or application content here -->
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/prototype.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/effects.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x_util.js" type="text/javascript"></script>
-        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
+        <script src="design/index/js/javascripts/prototype.js" type="text/javascript"></script>
+        <script src="design/index/js/javascripts/effects.js" type="text/javascript"></script>
+        <script src="design/index/js/javascripts/x.js" type="text/javascript"></script>
+        <script src="design/index/js/javascripts/x_util.js" type="text/javascript"></script>
+        <script src="design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
 		
 		<style>
 			/* Start with core styles outside of a media query that apply to mobile and up */
@@ -165,7 +165,7 @@
 							<div class="center" id="ctext">
 								<img class="cloud full" id="picturePreview" title="卫星云图" alt="卫星云图">
 								<select id="pictureSlt" onchange="changePicture(this);"></select>
-								<img src="http://www.szmb.gov.cn/design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
+								<img src="design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
 								<script type="text/javascript">
 									DATA_PATH="http://www.szmb.gov.cn/data_cache/";
 									createScript(DATA_PATH + "pictures/satPic/index.js?" + Math.random(), initPictureIndex);
