--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="refresh" content="360" >
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 		<link rel="shortcut icon" href="../images/logo.png">
-		<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.css">
+		<link rel="stylesheet" href="http://bcs.duapp.com/kwandi/css/jquery.mobile-1.4.2.min.css">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link id="weathericon" rel="shortcut icon">
         <!--<link rel="stylesheet" href="css/normalize.css">
@@ -15,7 +15,7 @@
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>-->
 		<!--<script src="http://bcs.duapp.com/kwandi/js/jquery-1.8.3.min.js"></script>-->
 		<script src="js/vendor/jquery-1.9.1.min.js"></script>
-		<script src="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.js"></script>
+		<script src="http://bcs.duapp.com/kwandi/js/jquery.mobile-1.4.2.min.js"></script>
         <!--<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>-->
 		
@@ -28,15 +28,15 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>-->
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="design/index/js/lib.js"></script>
-        <script src="design/index/js/config.js"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/lib.js"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/config.js"></script>
         
         <!-- Add your site or application content here -->
-        <script src="design/index/js/javascripts/prototype.js" type="text/javascript"></script>
-        <script src="design/index/js/javascripts/effects.js" type="text/javascript"></script>
-        <script src="design/index/js/javascripts/x.js" type="text/javascript"></script>
-        <script src="design/index/js/javascripts/x_util.js" type="text/javascript"></script>
-        <script src="design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/prototype.js" type="text/javascript"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/effects.js" type="text/javascript"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x.js" type="text/javascript"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/x_util.js" type="text/javascript"></script>
+        <script src="http://www.szmb.gov.cn/design/index/js/javascripts/imageloop.js" type="text/javascript"></script>
 		
 		<style>
 			/* Start with core styles outside of a media query that apply to mobile and up */
@@ -165,7 +165,7 @@
 							<div class="center" id="ctext">
 								<img class="cloud full" id="picturePreview" title="卫星云图" alt="卫星云图">
 								<select id="pictureSlt" onchange="changePicture(this);"></select>
-								<img src="design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
+								<img src="http://www.szmb.gov.cn/design/index/images/btn_play.gif" onclick="playPicture(this)" id="playButton" title="播放" align="middle" style="Display:none">
 								<script type="text/javascript">
 									DATA_PATH="http://www.szmb.gov.cn/data_cache/";
 									createScript(DATA_PATH + "pictures/satPic/index.js?" + Math.random(), initPictureIndex);
