--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="refresh" content="360" >
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
 		<link rel="shortcut icon" href="../images/logo.png">
-		<link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
+		<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link id="weathericon" rel="shortcut icon">
         <!--<link rel="stylesheet" href="css/normalize.css">
@@ -15,7 +15,7 @@
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>-->
 		<!--<script src="http://bcs.duapp.com/kwandi/js/jquery-1.8.3.min.js"></script>-->
 		<script src="js/vendor/jquery-1.9.1.min.js"></script>
-		<script src="js/jquery.mobile-1.4.2.min.js"></script>
+		<script src="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
         <!--<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>-->
 		
