--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="location" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>台风路径（深圳）</h3>
 							<div class="center" id="ttext">
-								<h6><a class="center" href="http://tf.szmb.gov.cn/wap.htm"><b>http://tf.szmb.gov.cn/wap.htm</b></a></h6>
+							  <iframe src="http://tf.szmb.gov.cn/wap.htm"></iframe>
 							</div>
 						</div>
 					</div>
