--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
 					<div class="ui-block-a">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="location" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>台风路径（深圳）</h3>
-							<div class="center" id="ttext">
-							  <iframe src="http://tf.szmb.gov.cn/wap.htm"></iframe>
+							<div class="center" id="tftext">
+							  <iframe src="http://tf.szmb.gov.cn/wap.htm" sandbox="allow-scripts allow-same-origin" seamless="seamless"></iframe>
 							</div>
 						</div>
 					</div>
