--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 			
 			div#nav-panel{width:12em;}
 			
-			.full {max-width: 100%; border:1px solid #ffffff; border-radius:2px; box-shadow: 1px 1px 2px #ffffff;}
+			/*.full {max-width: 100%; border:1px solid #ffffff; border-radius:2px; box-shadow: 1px 1px 2px #ffffff;}*/
+			.full {max-width: 100%;}
 			p { word-wrap:break-word;text-align: left;}
 			
 			.center {
