--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		<div data-role="page" data-title="阿武的天气" id="szweather">
 			<div data-role="content" class="center">
 				<div class="ui-grid-solo ui-responsive">
-					<div class="ui-block-a">
+					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="cloud" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>卫星云图（中国）</h3>
 							<!--
@@ -248,7 +248,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ui-block-a">
+					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="calendar" class="ui-shadow ui-corner-all" style="text-align:right;">
 							<h3>降雨估测（广东）</h3>
 							<!--
@@ -352,7 +352,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ui-block-a">
+					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed="false" data-collapsed-icon="carat-d" data-expanded-icon="info" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>天气预报（深圳）</h3>
 							<div class="weafor" id="weafor-intro">
@@ -364,7 +364,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="ui-block-a">
+					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed="false" data-collapsed-icon="carat-d" data-expanded-icon="info" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>天气趋势（深圳）</h3>
 							<div class="alarm" id="alarm_tip_id"></div>
@@ -402,7 +402,7 @@
 							document.getElementById("weather_icon2_0").title = '本次更新时间：' + SZ121_10dayWeather2.pubDate;
 						}
 					</script>
-					<div class="ui-block-a">
+					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="gear" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>温度分布（深圳）</h3>
 							<!--
@@ -424,7 +424,7 @@
 							</div>
 						</div>
 					</div>
-				  <div class="ui-block-a">
+				  <div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="recycle" class="ui-shadow ui-corner-all" style="text-align:left;">
 							<h3>风速分布（深圳）</h3>
 							<!--
