--- a/index.html
+++ b/index.html
@@ -457,10 +457,8 @@
 				 </div>
 				<div class="ui-grid-solo ui-responsive">
 					<div class="ui-block-a">
-						<h6 class="center"><b>所有气象数据均来自深圳气象局</b></h6>
-						<h6 class="center"><b>如需了解更详细的天气情况，请直接访问</b></h6>
-						<h6><a class="center" href="http://www.szmb.gov.cn"><b>http://www.szmb.gov.cn</b></a></h6>
-						<h6 class="center"><b>（深圳气象局官方网址）</b></h6>
+						<p class="center" style="font-size:80%;color:SlateGray;font-family:verdana">所有气象数据均来自深圳气象局</p>
+						<p class="center" style="font-size:80%;color:SlateGray;font-family:verdana">深圳气象局官方网址：<a class="center" href="http://www.szmb.gov.cn">http://www.szmb.gov.cn</a></p>
 					</div>
 				</div>
 			</div>
