--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
 				 </div>
 				<div class="ui-grid-solo ui-responsive">
 					<div class="ui-block-a">
-						<p class="center" style="font-size:80%;color:SlateGray;font-family:verdana">所有气象数据均来自深圳气象局</p>
-						<p class="center" style="font-size:80%;color:SlateGray;font-family:verdana">深圳气象局官方网址：<a class="center" href="http://www.szmb.gov.cn">http://www.szmb.gov.cn</a></p>
+						<p class="center" style="font-size:61.8%;color:#d0d0d0;font-family:verdana">所有气象数据均来自深圳气象局</p>
+						<p class="center" style="font-size:61.8%;color:#d0d0d0;font-family:verdana">深圳气象局官方网址：<a class="center" href="http://www.szmb.gov.cn">http://www.szmb.gov.cn</a></p>
 					</div>
 				</div>
 			</div>
