--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="ui-mobile">
 	<head>
-		<title>阿武的天气</title>
+		<title>阿武的天气——深圳</title>
 		<meta charset="utf-8">
 		<meta http-equiv="refresh" content="360" >
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
@@ -152,7 +152,7 @@
 				<div class="ui-grid-solo ui-responsive">
 					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="cloud" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>卫星云图（中国）</h3>
+							<h3>卫星云图</h3>
 							<!--
 							<p class="desc">
 							风云-2C位于东经105度的赤道上空</br>
@@ -250,7 +250,7 @@
 					</div>
 					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="calendar" class="ui-shadow ui-corner-all" style="text-align:right;">
-							<h3>降雨估测（广东）</h3>
+							<h3>降雨估测</h3>
 							<!--
 							<p class="desc">
 							非常实用，估测未来1小时降雨</br>
@@ -354,7 +354,7 @@
 					</div>
 					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed="false" data-collapsed-icon="carat-d" data-expanded-icon="info" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>天气预报（深圳）</h3>
+							<h3>天气预报</h3>
 							<div class="weafor" id="weafor-intro">
 								<div id="today_icon">
 									<img class="imgcon" id="weather_icon2_0">
@@ -366,7 +366,7 @@
 					</div>
 					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed="false" data-collapsed-icon="carat-d" data-expanded-icon="info" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>天气趋势（深圳）</h3>
+							<h3>天气趋势</h3>
 							<div class="alarm" id="alarm_tip_id"></div>
 						</div>
 					</div>
@@ -404,7 +404,7 @@
 					</script>
 					<div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="gear" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>温度分布（深圳）</h3>
+							<h3>温度分布</h3>
 							<!--
 							<p class="desc">
 							看颜色深浅知温度高低</br>
@@ -426,7 +426,7 @@
 					</div>
 				  <div class="ui-block-a full">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="recycle" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>风速分布（深圳）</h3>
+							<h3>风速分布</h3>
 							<!--
 							<p class="desc">
 							看颜色深浅知风力等级</br>
@@ -448,7 +448,7 @@
 					</div>
 					<div class="ui-block-a">
 						<div data-theme="b" data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="location" class="ui-shadow ui-corner-all" style="text-align:left;">
-							<h3>台风路径（深圳）</h3>
+							<h3>台风路径</h3>
 							<div class="center" id="tftext">
 								<a href="http://tf.szmb.gov.cn/wap.htm" class="ui-btn ui-shadow ui-btn-inline">进入台风实时路径</a>
 							</div>
